kind of react components

--- a/index.html
+++ b/index.html
@@ -13,13 +13,20 @@
     <p>Halaman ini ditampilkan menggunakan React.js</p>
 
     <div id="likedbutton"></div>
+    <div id="greeting"></div>
+    <div id="mydate"></div>
 
-    <!-- mengimpor react.js versi development -->
+    <!--
+        mengimpor react.js versi development
+        menggunakan cara CDN Content Delivery Network
+    -->
     <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
 
-    <!-- memanggil file mybutton.js -->
+    <!-- memanggil file javascript -->
     <script src="./mybutton.js"></script>
+    <script src="./mytext.js"></script>
+    <script src="./mydate.js"></script>
 </body>
 
 </html>
